WIP: Exercise 5 and 6 done. Resolving exercise 7

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <!--<script src="assets/section1-scope-hoisting/exercise1.js"></script>-->
     <!--<script src="assets/section1-scope-hoisting/exercise2.js"></script>-->
     <!--<script src="assets/section2-funciones-closures-asinconias/exercise3.js"></script>-->
-    <script src="assets/section2-funciones-closures-asinconias/exercise4.js"></script>
+    <!--<script src="assets/section2-funciones-closures-asinconias/exercise4.js"></script>-->
+    <!--<script src="assets/section2-funciones-closures-asinconias/exercise5.js"></script>-->
+    <script src="assets/section2-funciones-closures-asinconias/exercise6.js"></script>
   </body>
 </html>
