WIP: add script src to exercise 7 in index.html and reporting fix with user name to last commit, bad configuration of user name and email but yes I did it

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!--<script src="assets/section2-funciones-closures-asinconias/exercise3.js"></script>-->
     <!--<script src="assets/section2-funciones-closures-asinconias/exercise4.js"></script>-->
     <!--<script src="assets/section2-funciones-closures-asinconias/exercise5.js"></script>-->
-    <script src="assets/section2-funciones-closures-asinconias/exercise6.js"></script>
+    <!--<script src="assets/section2-funciones-closures-asinconias/exercise6.js"></script>-->
+    <script src="assets/section2-funciones-closures-asinconias/exercise7.js"></script>
   </body>
 </html>
