WIP: exercise 7 and 8 done, Resolving exercise 9

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <!--<script src="assets/section2-funciones-closures-asinconias/exercise4.js"></script>-->
     <!--<script src="assets/section2-funciones-closures-asinconias/exercise5.js"></script>-->
     <!--<script src="assets/section2-funciones-closures-asinconias/exercise6.js"></script>-->
-    <script src="assets/section2-funciones-closures-asinconias/exercise7.js"></script>
+    <!--<script src="assets/section2-funciones-closures-asinconias/exercise7.js"></script>-->
+    <!--<script src="assets/section3-closures-promise-webapis/exercise8.js"></script>-->
+    <script src="assets/section3-closures-promise-webapis/exercise9.js"></script>
   </body>
 </html>
