--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!--<script src="assets/section2-funciones-closures-asinconias/exercise6.js"></script>-->
     <!--<script src="assets/section2-funciones-closures-asinconias/exercise7.js"></script>-->
     <!--<script src="assets/section3-closures-promise-webapis/exercise8.js"></script>-->
-    <script src="assets/section3-closures-promise-webapis/exercise9.js"></script>
+    <!--<script src="assets/section3-closures-promise-webapis/exercise9.js"></script>-->
+    
   </body>
 </html>
