WIP: Resolving practical exercise: load and show data with fetch, verify disponibility function with promise and menu done

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <!--<script src="assets/section2-funciones-closures-asinconias/exercise7.js"></script>-->
     <!--<script src="assets/section3-closures-promise-webapis/exercise8.js"></script>-->
     <!--<script src="assets/section3-closures-promise-webapis/exercise9.js"></script>-->
-    
+    <script src="assets/section5-practical-exercise/Hotel_Reservations.js"></script>
   </body>
 </html>
